# transit-grid

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  tests.yml
examples/visualize/: Cargo.toml  README.md
examples/visualize/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  (+1 more)
src/: lib.rs
src/algorithms/: edge_length.rs  mod.rs
src/core/: accessability.rs  edge.rs  mod.rs  node_accessability.rs
src/graphs/: mod.rs  physical_graph.rs  topology_graph.rs  transit_network.rs
src/operations/: mod.rs
src/transit_grid/: lib.rs.html
transit_grid/: all.html  index.html  sidebar-items.js
transit_grid/algorithms/: index.html  sidebar-items.js  trait.ShortestPath.html  trait.ShortestPathWithAccessability.html
transit_grid/core/: enum.Accessability.html  enum.NodeAccessability.html  index.html  sidebar-items.js  struct.TopoEdge.html  struct.TopoNode.html  struct.TransitEdge.html  struct.TransitNode.html  trait.PathCoordinates.html  type.EdgeId.html  type.IdType.html  type.NodeId.html  type.TopoEdgeId.html  type.TopoNodeId.html
transit_grid/graphs/: index.html  sidebar-items.js  struct.PhysicalGraph.html  struct.TopoEdge.html  struct.TopoNode.html  struct.TopologyGraph.html  struct.TransitNetwork.html  trait.TopologyGraphRepairer.html
transit_grid/operations/: index.html  sidebar-items.js  trait.TransitNetworkModifier.html  trait.TransitNetworkRepairer.html
transit_grid/prelude/: index.html
(+60 files in other folders)
